@startuml

hide members
skinparam defaultFontSize 15


together {
	class BoostOptions
	class TreeOptions
}

BoostOptions --|> TreeOptions


together {
	class BoostTrainer
	abstract TreeTrainer
}

BoostTrainer *-- "1" TreeTrainer


together {
	class TreeTrainerImpl<SampleIndex>
	class NodeTrainer<SampleIndex>
}

TreeTrainerImpl *-- "many" NodeTrainer


together {
	class BoostPredictor
	class TreePredictor
	class TreeNode
}

BoostPredictor  *-- "many" TreePredictor
TreePredictor *-- "many" TreeNode


BoostOptions <.  BoostTrainer : uses
TreeOptions <. TreeTrainer : uses

TreeTrainer <|- TreeTrainerImpl

BoostTrainer .> BoostPredictor : creates
TreeTrainerImpl .> TreePredictor : creates
TreeTrainerImpl .> TreeNode : creates
NodeTrainer .> TreeNode  : initializes

@enduml
